# camel2snake

./: .gitignore  .secrets.baseline  README.md  camel2snake.py  pyproject.toml
.github/workflows/: publish.yml
src/camel2snake/: __init__.py  cli.py  core.py
tests/: test_camel2snake.py  test_cli.py
